[project]
name = "jaunt"
version = "0.0.1"
authors = [
  { name="Patrick Dunham", email="patrick.dunham.113@gmail.com" },
]
description = "A simple MySQL migration manager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mysql-connector-python",
]

[project.scripts]
jaunt = "jaunt:jaunt_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/PDunham113/jaunt"
Issues = "https://github.com/PDunham113/jaunt/issues"
